[package]
name = "contracts-helper"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = ["mockall"]

[dependencies]
ckb-std = "0.7.2"
mockall = { version = "0.9", optional = true }
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
