[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-tool = "0.2.2"
ckb-testtool = "0.2.2"
force-bridge-types = { path = "../types", default-features = false, features = ["contract", "devnet"] }
hex = "0.4"
molecule = { version = "=0.6.0", default-features = false }
serde = "1.0"
serde_json = "1.0"
rlp = {version = "0.4.5", default-features = false }
sparse-merkle-tree = { version = "0.3.1-pre", default-features = false }
