[package]
name = "force-bridge-types"
version = "0.1.0"
authors = ["huwenchao <zjuhwc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "devnet"]
std = ["molecule/std", "no-std-compat/std"]
contract = []
devnet = []
aggron = []
lina = []

[dependencies]
cfg-if = "1.0"
molecule = { version = "0.6", default-features = false }
ethereum-types = {version = "0.9.2", default-features = false }
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
sparse-merkle-tree = { version = "0.3.1-pre", default-features = false }
blake2b-ref = "0.3.0"

[dev-dependencies]
ethabi = "12.0.0"
hex = "0.4"
rlp = {version = "0.4.5", default-features = false }
