[package]
name = "recipient-typescript-lib"
version = "0.1.0"
authors = ["jacobdenver007 <jacobdenver@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["mockall", "no-std-compat/std"]

[dependencies]
ckb-std = "0.7.2"
mockall = { version = "0.9", optional = true }
molecule = { version = "0.6", default-features = false }
force-bridge-types = { path = "../../types", default-features = false, features = ["contract", "lina"]}
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
contracts-helper = { path = "../../contracts-helper", default-features = false }
blake2b-ref = "0.3.0"
